# zerodp

./: .gitignore  README.md  pyproject.toml
examples/: model.py  train_ddp.py  train_fsdp.py
scripts/: launch_ddp.sh  launch_fsdp.sh
src/zerodp/: __init__.py  bucket.py  comm.py  ddp.py  fsdp.py
tests/: test_bucket.py  test_ddp_correctness.py  test_fsdp_correctness.py
